@@ -196,6 +196,24 @@
 <!--              <suiteXmlFile>src/test/java/TestSuits/AddFromFile.xml</suiteXmlFile>-->
               <suiteXmlFile>src/test/java/TestSuits/TestNG.xml</suiteXmlFile>
             </suiteXmlFiles>
+              <forkCount>0</forkCount> <!-- changed this to 0 -->
+              <reuseForks>false</reuseForks>
+              <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
+              <printSummary>true</printSummary>
+              <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->
+
+              <!-- run test in headless mode -->
+              <systemPropertyVariables>
+                <glass.platform>Monocle</glass.platform>
+                <monocle.platform>Headless</monocle.platform>
+                <prism.order>d3d</prism.order>
+              </systemPropertyVariables>
+
+              <argLine>
+                --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+              </argLine>
+
           </configuration>
         </plugin>
       </plugins>
